tests/cases/should_fail/patterns/incomplete_list_pattern.stderr
error: encountered unclosed delimiter `[`, add a `]` after the inner expression
 --> $DIR/incomplete_list_pattern.hash:3:1
2 |   
3 |   [a := b;
  |   ^ here
